--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,4 +106,5 @@
     <string name="select_time_to_be_notified">Select time to be notified</string>
     <string name="select_time">Select Time</string>
     <string name="welcome_to_hiscycleguide">Welcome To HisCycleGuide</string>
+    <string name="submit">Submit</string>
 </resources>
