--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,10 +33,10 @@
     <string name="last_menstrual_start">Last Menstrual start</string>
     <string name="how_to_find_your_wife_s_last_start_date"><u>How to find your wife’s last start date?</u></string>
     <string name="continue_">Continue</string>
-    <string name="profile">Profile</string>
+    <string name="settings">Settings</string>
     <string name="prediction">Prediction</string>
-    <string name="articles">Insights</string>
-    <string name="articles_title">Article</string>
+    <string name="insights">Insights</string>
+    <string name="articles_title">Articles</string>
     <string name="calendar">Calendar</string>
     <string name="_29th">29th</string>
     <string name="october_2021">October 2021</string>
@@ -111,11 +111,4 @@
     <string name="hint_enter_email">Enter email</string>
     <string name="cancel">Cancel</string>
     <string name="error">Error</string>
-    <string-array name="brew_array">
-        <item>Cappuccino</item>
-        <item>Espresso</item>
-        <item>Mocha</item>
-        <item>Caffè Americano</item>
-        <item>Cafe Zorro</item>
-    </string-array>
 </resources>
