--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="finish">Finish</string>
     <string name="background">background</string>
     <string name="sign_in">Sign in</string>
+    <string name="log_out">Logout</string>
     <string name="sample_email">abc@email.com</string>
     <string name="your_password">Your password</string>
     <string name="forgot_password">Forgot Password?</string>
@@ -33,6 +34,7 @@
     <string name="last_menstrual_start">Last Menstrual start</string>
     <string name="how_to_find_your_wife_s_last_start_date"><u>How to find your wife’s last start date?</u></string>
     <string name="continue_">Continue</string>
+    <string name="skip_spouse_info">Do this later</string>
     <string name="settings">Settings</string>
     <string name="prediction">Prediction</string>
     <string name="insights">Insights</string>
