--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">HisCycleGuide</string>
+    <string name="app_name">His Cycle Guide</string>
     <string name="logo">Logo</string>
 
     <string name="landing_title_01">View menstrual calendar</string>
@@ -14,6 +14,7 @@
     <string name="finish">Finish</string>
     <string name="background">background</string>
     <string name="sign_in">Sign in</string>
+    <string name="log_out">Logout</string>
     <string name="sample_email">abc@email.com</string>
     <string name="your_password">Your password</string>
     <string name="forgot_password">Forgot Password?</string>
@@ -33,9 +34,11 @@
     <string name="last_menstrual_start">Last Menstrual start</string>
     <string name="how_to_find_your_wife_s_last_start_date"><u>How to find your wife’s last start date?</u></string>
     <string name="continue_">Continue</string>
-    <string name="profile">Profile</string>
+    <string name="skip_spouse_info">Do this later</string>
+    <string name="settings">Settings</string>
     <string name="prediction">Prediction</string>
-    <string name="articles">Insights</string>
+    <string name="insights">Insights</string>
+    <string name="articles_title">Articles</string>
     <string name="calendar">Calendar</string>
     <string name="_29th">29th</string>
     <string name="october_2021">October 2021</string>
@@ -107,11 +110,7 @@
     <string name="select_time">Select Time</string>
     <string name="welcome_to_hiscycleguide">Welcome To HisCycleGuide</string>
     <string name="submit">Submit</string>
-    <string-array name="brew_array">
-        <item>Cappuccino</item>
-        <item>Espresso</item>
-        <item>Mocha</item>
-        <item>Caffè Americano</item>
-        <item>Cafe Zorro</item>
-    </string-array>
+    <string name="hint_enter_email">Enter email</string>
+    <string name="cancel">Cancel</string>
+    <string name="error">Error</string>
 </resources>
